<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.unaprime.app.android.una.viewmodels.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tvLogin"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="12dp">

            <com.unaprime.app.android.una.views.customviews.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/hint_edittext">

                <com.unaprime.app.android.una.views.customviews.CustomTextInputEditText
                    android:id="@+id/tietMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_mobile_number_hint"
                    android:inputType="number|textNoSuggestions"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:typeFaceType="medium" />
            </com.unaprime.app.android.una.views.customviews.CustomTextInputLayout>

            <com.unaprime.app.android.una.views.customviews.CustomTextView
                android:id="@+id/tvMobileNumberError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="@{viewModel.mobileNumberError}"
                android:textColor="@color/darkRed"
                android:textSize="14dp"
                android:visibility="visible"
                app:typeFaceType="medium" />

            <com.unaprime.app.android.una.views.customviews.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/hint_edittext"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/lightGrey">

                <com.unaprime.app.android.una.views.customviews.CustomTextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:typeFaceType="medium" />
            </com.unaprime.app.android.una.views.customviews.CustomTextInputLayout>

            <com.unaprime.app.android.una.views.customviews.CustomTextView
                android:id="@+id/tvPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@{viewModel.passwordError}"
                android:textColor="@color/darkRed"
                android:textSize="14dp"
                android:visibility="visible"
                app:typeFaceType="medium" />
        </LinearLayout>

        <com.unaprime.app.android.una.views.customviews.CustomTextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:typeFaceType="thick" />
    </RelativeLayout>
</layout>
