<resources>
    <string name="app_name">UNA</string>
    <string name="homepage_label">Homepage</string>
    <string name="internal_server_error">Something went wrong</string>
    <string name="login_mobile_number_hint">Mobile Number*</string>
    <string name="login_password_hint">Password*</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="login_mobile_number_error">Please enter valid mobile number</string>
    <string name="login_password_error">Please enter valid password</string>
    <string name="login_otp_error">Please enter a valid otp</string>
    <string name="login_generate_otp">Generate OTP</string>
    <string name="login_bottom_text_part1">By logging in, you agree to the</string>
    <string name="login_bottom_text_part2"> of UNAPrime Technologies Private Limited</string>
    <string name="term_cond"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_middle_text">Do not have Account?</string>
    <string name="login_register">Register</string>
    <string name="login_resend_otp">Resend OTP</string>
    <string name="login_enter_otp_hint">Enter OTP*</string>
    <string name="image">image</string>
    <string name="register_otp_text1">Enter your Mobile number\nwe will send OTP on this number</string>
    <string name="register_otp_text2">Enter OTP and\nclick on \"Next\" button</string>
    <string name="register_generate_otp">Generate OTP</string>
    <string name="register_next">Next</string>
</resources>
